--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 
 /*may need to get rid of section and just use div becasue section is used for headers and footers*/
 
+
+/*nav(aka button design)*/
 ul.nav {
   list-style-type: none;
 }
@@ -21,6 +23,14 @@ a.button{
 
 a.button:hover{
   background-color: lightblue;
+}
+
+/*content wrapper*/
+.contentWrapper{
+  max-width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  margin: 0 auto;
 }
 
 
