--- a/css/style.css
+++ b/css/style.css
@@ -4,28 +4,35 @@
 
 
 /*nav(aka button design)*/
-ul.nav {
+.nav {
   list-style-type: none;
 }
 
 a.button{
-  background-color: white; /* Green */
-  padding: 5px 7px;
+  background-color: RoyalBlue;
+  padding: 10px 10px;
   text-align: center;
-  display: inline-block;
   font-size: 1em;
-  margin-left:1%;
-  float: left;
-  border: 1.5px solid black;
-  border-radius: 13px;
-  color:black;
+  margin-left: 5%;
+  margin-right:5%;
+  border-radius: 25px;
+  color:white;
+  float:left;
 }
 
 a.button:hover{
-  background-color: lightblue;
+  background-color: darkblue;
 }
 
-/*content wrapper*/
+/*wrappers*/
+.header{
+  float:center;
+  align-content: center;
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .contentWrapper{
   max-width: 80%;
   margin-left: auto;
@@ -33,8 +40,49 @@ a.button:hover{
   margin: 0 auto;
 }
 
+.footer{
+  float:center;
+  max-width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+p, h1, h3, h4, h2, li, h5{
+  text-align:center;
+}
+
+img{
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 
 /*Five different styles for each pages*/
 /*index*/
+/* bottom and top borders and website font */
+#resume {
+  font-family: 'Courier New', monospace;
+}
+
+.resume_content {
+   border-bottom-style: solid;
+   background-color: lightgrey;
+   padding-left: 5%;
+   padding-right: 5%;
+   padding-top: 0.1%;
+   padding-left: 2%;
+   margin-bottom: 1%;
+}
+
+ul.resume_list{
+  list-style-position: inside;
+}
+
 /*trees*/
+/*rouded borders for the images */
+/*fixed width*/
+
+
 /*cat*/
+/*with border weight on images*/
+/*fluid layout*/
